2005-02-08 Toady <toady@gscore.org>

	* src/score.c: fixed bug that would not initialize the id given to object value
	* src/key_event.c: improved object insertion

2005-02-06 Cheyenne <j.marrec@10pouces.org>

	*  src/score.[ch]: new  functions  to retrieve  data  from the  active
	widget
	* src/*.c: suppressed global variables to enable multiple document interface
	(see http://www.gscore.org/pipermail/gscore-devel/2005-February/000019.html)

2005-01-20 toady <toady@gscore.org>

	* src/draw.c: don't render notes which are not displayed on screen (yadh)
	* src/key_event.c, src/realize_area.c: basic chords support
	
2005-01-13 toady <toady@gscore.org>

	* src/realize_area.c: Fixed bug #2870
	
2005-01-11 toady <toady@gscore.org>

	* src/file.c: Fixed bug #3025, reported by Jerome Marrec
	
2005-01-05 toady <toady@gscore.org>

	* src/mouse_event.c: Fixed bug pointed by Raymond Ostertag. Notes selected even if the cursor is not selected.
	
2004-12-17 toady <toady@gscore.org>
     
	* SConstruct: Applied patch from Julien Salort for better prefixing <julien.salort ens-lyon fr>
	
2004-12-15 toady <toady@gscore.org>

	Release of 0.0.8: laetmotive.
	We must add few elements, but now, the most important are the plugins.
	
2004-12-14 toady <toady@gscore.org>

	* src/realize_area.c: fixed bug for beams (needs more work though, see far above ;)
	* src/objects.c, src/object_callbacks.c: you can now change the note type from the selection
	
2004-12-07 toady <toady@gscore.org>

	* src/key_event.c: fixed bug #2868 reported by krix, making the horizontal adjustment moving as the keycursor does
	* src/selection.c: fixed the dirty selection... a dirty way
	
2004-12-02 toady <toady@gscore.org>

	* src/plugin.c: fixed a bug which made gscore unable to load more than one plugin :) (a stupid return NULL)
	
2004-11-30 toady <toady@gscore.org>

	Release of 0.0.7: bond.
	Right, we still have bugs, but gscore is usable enough to work with abc music.
	
2004-11-23 toady <toady@gscore.org>
