@@ -1,10 +1,10 @@
 /* -*- mode:C; tab-width:8; c-default-style:linux; c-basic-offset:8; indent-tabs-mode:nil -*- */
 /*
- * display.c
+ * note.c
  * gscore - a musical score editor
  *
- * (C) Copyright 2001-2004 Sebastien Tricaud
- * e-mail : toady@gscore.org
+ * (C) Copyright 2001-2005 Sebastien Tricaud
+ * e-mail : toady@gscore.og
  * URL    : http://www.gscore.org
  *
  * This program is free software; you can redistribute it and/or modify
@@ -24,28 +24,27 @@
 
 #include <gtk/gtk.h>
 
-#include "gscore.h"
-#include "display.h"
+#include "constants.h"
 
-void
-barnotes (gpointer callback_data, guint callback_action, GtkWidget *widget)
+/* Returns TRUE if the type is a note */
+extern gboolean 
+is_note(gint type)
 {
+        switch(type) {
 
+        case DOUBLEWHOLE:
+        case WHOLE:
+        case HALF:
+        case QUARTER:
+        case EIGHTH:
+        case SIXTEENTH:
+        case THIRTYSECOND:
+        case SIXTYFOURTH:
+                return TRUE;
+        default:
+                return FALSE;
+        }
+
+        return FALSE;
 }
 
-void display_new_page(gint measure)
-{
-
-}
-
-void display_measure_line_return(GtkWidget *area, gint measure)
-{
-          GdkGC *gc;
-          gint j = 0;
-
-          gc = gdk_gc_new(area->window);
-
-          gdk_draw_line(area->window, gc,
-                        20,j, 20, j+20);
-
-}
